--- a/task/qixin.conf
+++ b/task/qixin.conf
@@ -2,6 +2,7 @@
 # https://qxzy.top/rules/QuantumultX/qixin.conf
 
 cron "* * * * *" script-path=https://raw.githubusercontent.com/chavyleung/scripts/master/box/switcher/box.switcher.js, enabled=true, tag=切换会话
+cron "35 9-22 * * *" script-path=https://raw.githubusercontent.com/age174/-/main/qhyd.js, enabled=true, tag=千禾阅读
 cron "1 0 * * *" script-path=https://raw.githubusercontent.com/age174/-/main/blnc.js, enabled=true, tag=部落农场
 cron "0 0,1-23/3 * * *" script-path=https://qxzy.top/rules/QuantumultX/js/lxk0301/jd_mohe.js, enabled=true, tag=5G超级盲盒
 cron "0 0 1 1 *" script-path=https://raw.githubusercontent.com/age174/-/main/mmdzz.js, enabled=true, tag=萌喵大作战无限刷
@@ -13,8 +14,8 @@ cron "0 7 * * *" script-path=https://raw.githubusercontent.com/xl2101200/-/main/
 cron "0 0/30 * * * *" script-path=https://raw.githubusercontent.com/xl2101200/-/main/keepjs.js, enabled=true, tag=keep小程序浇水豆
 cron "15 08 2-18 4 *" script-path=https://raw.githubusercontent.com/sngxpro2/AutoSyncScript/monk/car/monk_skyworth_car.js, enabled=true, tag=京东创维全勤奖(加购)
 cron "0 6 * * *" script-path=https://raw.githubusercontent.com/xl2101200/-/main/keepdk.js, enabled=true, tag=keep小程序打卡偷能量
-cron "0 0/10 * * * *" script-path=https://raw.githubusercontent.com/xl2101200/-/main/qkyl.js, enabled=true, tag=趣客有礼
-cron "0 8 * * *" script-path=https://raw.githubusercontent.com/xl2101200/-/main/pxx.js, enabled=true, tag=拼夕夕
+cron "0 0/10 * * * *" script-path=https://raw.githubusercontent.com/xl2101200/-/main/qkyl.js, enabled=true, tag=⚠️趣客有礼
+cron "0 8 * * *" script-path=https://raw.githubusercontent.com/xl2101200/-/main/pxx.js, enabled=true, tag=⚠️拼夕夕
 cron "0-59 9,12,22 * * *" script-path=https://raw.githubusercontent.com/age174/-/main/shq.js, enabled=true, tag=生活圈
 cron "0 9,13 * * *" script-path=https://raw.githubusercontent.com/age174/-/main/lhws.js, enabled=true, tag=落花无生
 cron "15 9 * * *" script-path=https://raw.githubusercontent.com/age174/-/main/vsh.js, enabled=true, tag=V生活
@@ -23,7 +24,7 @@ cron "0-59 9-22 * * *" script-path=https://raw.githubusercontent.com/age174/-/ma
 cron "20 9 * * *" script-path=https://raw.githubusercontent.com/age174/-/main/ximei.js, enabled=true, tag=西梅
 cron "10-15 9 * * *" script-path=https://raw.githubusercontent.com/age174/-/main/lgyy.js, enabled=true, tag=朗果英语
 cron "10 8 * * *" script-path=https://raw.githubusercontent.com/age174/-/main/zqwn.js, enabled=true, tag=最强蜗牛
-cron "5,35 9-22 * * *" script-path=https://raw.githubusercontent.com/age174/-/main/smz.js, enabled=true, tag=睡眠赚无限刷
+cron "5,35 9-22 * * *" script-path=https://raw.githubusercontent.com/age174/-/main/smz.js, enabled=true, tag=⚠️睡眠赚
 cron "0,30 8-23 * * *" script-path=https://raw.githubusercontent.com/age174/-/main/hlyy.js, enabled=true, tag=葫芦音乐
 cron "30 10 * * *" script-path=https://raw.githubusercontent.com/age174/-/main/yqzh.js, enabled=true, tag=悦趣阅读
 cron "10 9-22 * * *" script-path=https://raw.githubusercontent.com/age174/-/main/wcxcx.js, enabled=true, tag=文创阅读小程序
