--- a/task/qixin.conf
+++ b/task/qixin.conf
@@ -1,7 +1,7 @@
 # 奇心脚本合集
 # https://qxzy.top/rules/QuantumultX/qixin.conf
 
-cron "* * * * *" script-path=https://raw.githubusercontent.com/chavyleung/scripts/master/box/switcher/box.switcher.js, enabled=true, tag=切换会话
+cron "0 9 * * *" script-path=https://raw.githubusercontent.com/chavyleung/scripts/master/box/switcher/box.switcher.js, enabled=true, tag=切换会话
 cron "35 9-22 * * *" script-path=https://raw.githubusercontent.com/age174/-/main/qhyd.js, enabled=true, tag=千禾阅读
 cron "1 0 * * *" script-path=https://raw.githubusercontent.com/age174/-/main/blnc.js, enabled=true, tag=部落农场
 cron "0 0,1-23/3 * * *" script-path=https://qxzy.top/rules/QuantumultX/js/lxk0301/jd_mohe.js, enabled=true, tag=5G超级盲盒
