--- a/task/qixin.conf
+++ b/task/qixin.conf
@@ -6,7 +6,7 @@ cron "10 * * * *" script-path=https://qxzy.top/rules/QuantumultX/js/lxk0301/jd_j
 cron "0 9 * * *" script-path=https://cdn.jsdelivr.net/gh/ziye888/JavaScript@main/Task/tls.js, img-url=https://qxzy.top/rules/QuantumultX/img/tls.png, enabled=true, tag=特仑苏小程序
 cron "10 16 * * *" script-path=https://qxzy.top/rules/QuantumultX/js/lxk0301/jd_tcl.js, img-url=https://raw.githubusercontent.com/58xinian/icon/master/jdyjd.png, enabled=true, tag=京东球队赢好礼（不加购）
 cron "0 0 1 1 *" script-path=https://raw.githubusercontent.com/sngxpro/QuanX/master/scripts/cgwz.js, img-url=https://ae01.alicdn.com/kf/Uaade4566dd3744299956aa883f225386u.jpg, enabled=true, tag=猜歌王者改进度
-cron "25 8 * 4-5 *" script-path=https://share.r2ray.com/dust/car/z_tcl_lining.js, img-url=https://qxzy.top/rules/QuantumultX/img/jd.png, enabled=true, tag=京东TCL电视自营
+cron "25 8 * 4-5 *" script-path=https://qxzy.top/rules/QuantumultX/js/zwf234/z_tcl_lining.js, img-url=https://qxzy.top/rules/QuantumultX/img/jd.png, enabled=true, tag=京东TCL电视自营
 cron "4 10 * * *" script-path=https://qxzy.top/rules/QuantumultX/js/lxk0301/jd_market_lottery.js, img-url=https://qxzy.top/rules/QuantumultX/img/jd.png, enabled=true, tag=幸运大转盘
 cron "5-45/20 * * * *" script-path=https://qxzy.top/rules/QuantumultX/js/lxk0301/jd_health_collect.js, img-url=https://qxzy.top/rules/QuantumultX/img/jd.png, enabled=true, tag=东东健康社区收集能量
 cron "10 0-23/4 * * *" script-path=https://qxzy.top/rules/QuantumultX/js/lxk0301/jd_health.js, img-url=https://qxzy.top/rules/QuantumultX/img/jd.png, enabled=true, tag=东东健康社区
