--- a/rule/task.conf
+++ b/rule/task.conf
@@ -1,7 +1,7 @@
 
 
 
-cron "*/30 * * * *" script-path=https://raw.githubusercontent.com/Sunert/Scripts/master/Task/baidu_speed.js, img-url=https://qxzy.top/rules/QuantumultX/img/baidu_speed.png, enable=false, tag=百度极速
+cron "*/30 * * * *" script-path=https://raw.githubusercontent.com/pxylen/abc_/master/scripts/baidu_speed.js, img-url=https://qxzy.top/rules/QuantumultX/img/baidu_speed.png, enable=false, tag=百度极速
 cron "*/10 0-1 6 * * *" script-path=https://raw.githubusercontent.com/pxylen/abc_/master/scripts/baidu_speed_cash.js, img-url=https://qxzy.top/rules/QuantumultX/img/baidu_speed.png, enable=false, tag=百度极速版提现
 
 
@@ -16,7 +16,5 @@ cron "7 0 * * *" script-path=https://raw.githubusercontent.com/NobyDa/Script/mas
 cron "10 0 * * *" script-path=https://raw.githubusercontent.com/ztxtop/x/main/youth_banner.js, img-url=https://raw.githubusercontent.com/erdongchanyo/icon/main/taskicon/Youth.png, tag=中青看看赚
 
 
-
-cron "8 0 * * *" script-path=https://raw.githubusercontent.com/Sunert/Scripts/master/Task/weibo.js, img-url=https://raw.githubusercontent.com/Orz-3/mini/master/Color/weibo.png, enable=false,  tag=微博&钱包
+cron "8 0 * * *" script-path=https://raw.githubusercontent.com/pxylen/abc_/master/scripts/weibo.js, img-url=https://raw.githubusercontent.com/Orz-3/mini/master/Color/weibo.png, enable=true,  tag=微博&钱包
 cron "10 9-22 * * *" script-path=https://raw.githubusercontent.com/photonmang/quantumultX/master/58/58.js,  img-url=https://raw.githubusercontent.com/sngxpro/icons/main/genshin/anbo.png, enable=false,tag=58同城
-cron "*/30 10-22 * * *" script-path=https://raw.githubusercontent.com/pxylen/abc_/ziye/Task/tls.js, img-url=https://raw.githubusercontent.com/sngxpro/icons/main/genshin/mona.png, enable=false,  tag=特仑苏
