--- a/rule/task.conf
+++ b/rule/task.conf
@@ -13,8 +13,8 @@ cron "5 0 * * *" script-path=https://raw.githubusercontent.com/zZPiglet/Task/mas
 cron "5 0 * * *" script-path=https://raw.githubusercontent.com/zZPiglet/Task/master/DiDi/DiDi_reward.js, img-url=https://raw.githubusercontent.com/Orz-3/mini/master/Color/didi.png, tag=滴滴出行
 cron "6 0 * * *" script-path=https://raw.githubusercontent.com/yangtingxiao/QuantumultX/master/scripts/ttwk/ttwk.js, img-url=https://raw.githubusercontent.com/yangtingxiao/QuantumultX/master/image/ttwk.png, tag=支付宝天天挖矿
 cron "7 0 * * *" script-path=https://raw.githubusercontent.com/NobyDa/Script/master/iQIYI-DailyBonus/iQIYI.js, img-url=https://raw.githubusercontent.com/Orz-3/mini/master/Color/iQIYI.png, tag=爱奇艺
+cron "8 0 * * *" script-path=https://raw.githubusercontent.com/pxylen/abc_/master/scripts/weibo.js, img-url=https://raw.githubusercontent.com/Orz-3/mini/master/Color/weibo.png, enable=true,  tag=微博&钱包
+cron "9 0 * * *" script-path=https://raw.githubusercontent.com/chavyleung/scripts/master/neteasenews/neteasenews.js, img-url=https://raw.githubusercontent.com/Orz-3/mini/master/Color/neteasenews.png, enabled=true, tag=网易新闻
 cron "10 0 * * *" script-path=https://raw.githubusercontent.com/ztxtop/x/main/youth_banner.js, img-url=https://raw.githubusercontent.com/erdongchanyo/icon/main/taskicon/Youth.png, tag=中青看看赚
 
-
-cron "8 0 * * *" script-path=https://raw.githubusercontent.com/pxylen/abc_/master/scripts/weibo.js, img-url=https://raw.githubusercontent.com/Orz-3/mini/master/Color/weibo.png, enable=true,  tag=微博&钱包
 cron "10 9-22 * * *" script-path=https://raw.githubusercontent.com/photonmang/quantumultX/master/58/58.js,  img-url=https://raw.githubusercontent.com/sngxpro/icons/main/genshin/anbo.png, enable=false,tag=58同城
