--- a/task/qixin.conf
+++ b/task/qixin.conf
@@ -2,6 +2,7 @@
 # https://qxzy.top/rules/QuantumultX/qixin.conf
 
 cron "0 9 * * *" script-path=https://raw.githubusercontent.com/chavyleung/scripts/master/box/switcher/box.switcher.js, img-url=https://qxzy.top/rules/QuantumultX/img/box.png, enabled=true, tag=切换会话
+cron "10 0 * * *" script-path=https://raw.githubusercontent.com/age174/-/main/bsly.js, img-url=https://ae01.alicdn.com/kf/U2fec2be787b74fb3928d83773822eef56.jpg, enabled=true, tag=百事乐元
 cron "10 * * * *" script-path=https://qxzy.top/rules/QuantumultX/js/lxk0301/jd_jin_tie.js, img-url=https://qxzy.top/rules/QuantumultX/img/jd.png, enabled=true, tag=领金贴
 cron "0 9 * * *" script-path=https://cdn.jsdelivr.net/gh/ziye888/JavaScript@main/Task/tls.js, img-url=https://qxzy.top/rules/QuantumultX/img/tls.png, enabled=true, tag=特仑苏小程序
 cron "10 16 * * *" script-path=https://qxzy.top/rules/QuantumultX/js/lxk0301/jd_tcl.js, img-url=https://raw.githubusercontent.com/58xinian/icon/master/jdyjd.png, enabled=true, tag=京东球队赢好礼（不加购）
@@ -112,8 +113,8 @@ cron "15,45 10-22 * * *" script-path=https://raw.githubusercontent.com/age174/-/
 cron "1,30 10-20 * * *" script-path=https://raw.githubusercontent.com/ZhiYi-N/Private-Script/master/Scripts/ranlv.js, img-url=https://qxzy.top/rules/QuantumultX/img/ranlv.png, enabled=true, tag=燃旅视频
 cron "15 0 * * *" script-path=https://raw.githubusercontent.com/age174/-/main/jqb.js, img-url=https://ftp.bmp.ovh/imgs/2021/02/9e6d449acb9b6889.png, enabled=true, tag=金钱豹
 cron "15 10 * * *" script-path=https://raw.githubusercontent.com/age174/-/main/mhdsp.js, img-url=https://raw.githubusercontent.com/usrnb/options/main/QuantumultX/icons/task/mhdsp.png, enabled=true, tag=陌嗨短视频
-cron "0 0 * * *" script-path=https://qxzy.top/rules/QuantumultX/js/jd_speed_redpocke.js, img-url=https://qxzy.top/rules/QuantumultX/img/jd_speed_sign.png, enabled=true, tag=京东极速版红包
-cron "0 7 * * *" script-path=https://qxzy.top/rules/QuantumultX/js/jd_speed_sign.js, img-url=https://qxzy.top/rules/QuantumultX/img/jd_speed_sign.png, enabled=true, tag=京东极速版
+cron "0 0 * * *" script-path=https://qxzy.top/rules/QuantumultX/js/lxk0301/jd_speed_redpocke.js, img-url=https://qxzy.top/rules/QuantumultX/img/jd_speed_sign.png, enabled=true, tag=京东极速版红包
+cron "0 7 * * *" script-path=https://qxzy.top/rules/QuantumultX/js/lxk0301/jd_speed_sign.js, img-url=https://qxzy.top/rules/QuantumultX/img/jd_speed_sign.png, enabled=true, tag=京东极速版
 cron "0 9,18 * * 1-5" script-path=https://raw.githubusercontent.com/yichahucha/surge/master/clock_in.js, img-url=https://qxzy.top/rules/QuantumultX/img/dingding.png, enabled=true, tag=钉钉打卡提醒
 cron "30 8 * * *" script-path=https://raw.githubusercontent.com/nzw9314/QuantumultX/master/yichahucha/cron_daily.js, img-url=https://qxzy.top/rules/QuantumultX/img/cron_daily.png, enabled=true, tag=每日一句+蚂蚁森林收能量
 cron "10 9 * * *" script-path=https://raw.githubusercontent.com/yangtingxiao/QuantumultX/master/scripts/ttwk/ttwk.js, img-url=https://raw.githubusercontent.com/yangtingxiao/QuantumultX/master/image/ttwk.png, enabled=true, tag=支付宝天天挖矿
