--- a/task/qixin.conf
+++ b/task/qixin.conf
@@ -2,6 +2,7 @@
 # https://qxzy.top/rules/QuantumultX/qixin.conf
 
 cron "0 9 * * *" script-path=https://raw.githubusercontent.com/chavyleung/scripts/master/box/switcher/box.switcher.js, img-url=https://qxzy.top/rules/QuantumultX/img/box.png, enabled=true, tag=切换会话
+cron "0 8 * * *" script-path=https://raw.githubusercontent.com/xl2101200/-/main/hhkk.js, img-url=https://qxzy.top/rules/QuantumultX/img/hhkk.png, enabled=true, tag=火狐看看
 cron "10 0 * * *" script-path=https://raw.githubusercontent.com/age174/-/main/bsly.js, img-url=https://ae01.alicdn.com/kf/U2fec2be787b74fb3928d83773822eef56.jpg, enabled=true, tag=百事乐元
 cron "10 * * * *" script-path=https://qxzy.top/rules/QuantumultX/js/lxk0301/jd_jin_tie.js, img-url=https://qxzy.top/rules/QuantumultX/img/jd.png, enabled=true, tag=领金贴
 cron "0 9 * * *" script-path=https://cdn.jsdelivr.net/gh/ziye888/JavaScript@main/Task/tls.js, img-url=https://qxzy.top/rules/QuantumultX/img/tls.png, enabled=true, tag=特仑苏小程序
@@ -103,9 +104,10 @@ cron "30 8,13,19 * * *" script-path=https://qxzy.top/rules/QuantumultX/js/jx_cfd
 cron "10 0 * * *" script-path=https://raw.githubusercontent.com/whyour/hundun/master/quanx/jd_collectBlueCoin.js, enabled=true, tag=京小超领蓝币
 cron "10 12,18 * * *" script-path=https://raw.githubusercontent.com/id77/QuantumultX/master/task/jdWuLiu.js, img-url=https://qxzy.top/rules/QuantumultX/img/jd.png, enabled=true, tag=京东物流派件提醒
 cron "0 9,12,20,21 * * *" script-path=https://qxzy.top/rules/QuantumultX/js/jd_global_mh.js, img-url=https://qxzy.top/rules/QuantumultX/img/jd_global_mh.png, enabled=true, tag=京东国际盲盒
-cron "20 5 10 * * *" script-path=https://raw.githubusercontent.com/Sunert/Scripts/master/Task/youth_gain.js, img-url=https://qxzy.top/rules/QuantumultX/img/youth.png, enabled=true, tag=中青浏览赚
-cron "*/10 5-23 * * *" script-path=https://raw.githubusercontent.com/Sunert/Scripts/master/Task/youth.js, img-url=https://qxzy.top/rules/QuantumultX/img/youth.png, enabled=true, tag= 中青签到&转盘宝箱
-cron "10 */2 * * *" script-path=https://raw.githubusercontent.com/Sunert/Scripts/master/Task/Youth_Read.js, img-url=https://qxzy.top/rules/QuantumultX/img/youth.png, enabled=true, tag=中青自动阅读
+cron "8/30 * 1-6 * * *" script-path=https://raw.githubusercontent.com/ztxtop/x/main/zqread.js, img-url=https://qxzy.top/rules/QuantumultX/img/youth.png, enabled=true, tag=中青阅读
+cron "30 6 * * *" script-path=https://raw.githubusercontent.com/ztxtop/x/main/youth_banner.js, img-url=https://qxzy.top/rules/QuantumultX/img/youth.png, enabled=true, tag=中青看看赚
+cron "*/30 0-23 * * *" script-path=https://raw.githubusercontent.com/CenBoMin/QuantumultX/master/Scripts/Youth/youth.js, img-url=https://qxzy.top/rules/QuantumultX/img/youth.png, enabled=true, tag=中青看点极速版
+cron "10 1-23 * * *" script-path=https://raw.githubusercontent.com/CenBoMin/QuantumultX/master/Scripts/Youth/Youth_AutoRead.js, img-url=https://qxzy.top/rules/QuantumultX/img/youth.png, enabled=true, tag=中青阅读自动阅读
 cron "0/15 1-6 * * *" script-path=https://qxzy.top/rules/QuantumultX/js/ZIYE/Task/xiaole.js, img-url=https://qxzy.top/rules/QuantumultX/img/xiaole.png, enabled=true, tag=微信小乐优券
 cron "15 12,14,16,20 * * *" script-path=https://raw.githubusercontent.com/age174/-/main/fqkk.js, img-url=https://qxzy.top/rules/QuantumultX/img/fqkk.png, enabled=true, tag=番茄看看
 cron "*/10 * * * *" script-path=https://raw.githubusercontent.com/age174/-/main/sz.js, img-url=https://qxzy.top/rules/QuantumultX/img/sz.png, enabled=true, tag=闪挣
