--- a/task/qixin.conf
+++ b/task/qixin.conf
@@ -2,6 +2,7 @@
 # https://qxzy.top/rules/QuantumultX/qixin.conf
 
 cron "0 9 * * *" script-path=https://raw.githubusercontent.com/chavyleung/scripts/master/box/switcher/box.switcher.js, img-url=https://qxzy.top/rules/QuantumultX/img/box.png, enabled=true, tag=切换会话
+cron "10,20,30 0-23 * * *" script-path=https://raw.githubusercontent.com/age174/-/main/xfyjc.js, img-url=https://ae01.alicdn.com/kf/Ue110888eddad48a8a78d99284e599b134.jpg, enabled=true, tag=幸福养鸡场
 cron "0 8 * * *" script-path=https://raw.githubusercontent.com/xl2101200/-/main/hhkk.js, img-url=https://qxzy.top/rules/QuantumultX/img/hhkk.png, enabled=true, tag=火狐看看
 cron "10 0 * * *" script-path=https://raw.githubusercontent.com/age174/-/main/bsly.js, img-url=https://ae01.alicdn.com/kf/U2fec2be787b74fb3928d83773822eef56.jpg, enabled=true, tag=百事乐元
 cron "10 * * * *" script-path=https://qxzy.top/rules/QuantumultX/js/lxk0301/jd_jin_tie.js, img-url=https://qxzy.top/rules/QuantumultX/img/jd.png, enabled=true, tag=领金贴
@@ -92,7 +93,7 @@ cron "0 */30 * * * *" script-path=https://raw.githubusercontent.com/ZhiYi-N/Priv
 cron "15 12 * * *" script-path=https://raw.githubusercontent.com/age174/-/main/yyxs.js, img-url=https://qxzy.top/rules/QuantumultX/img/yyxs.png, enabled=true, tag=阅友小说
 cron "30 18 * * *" script-path=https://raw.githubusercontent.com/whyour/hundun/master/quanx/jd_zjd.js, img-url=https://qxzy.top/rules/QuantumultX/img/jd_zjd.png, enabled=true, tag=半自动领京豆
 cron "0 9 * * *" script-path=https://raw.githubusercontent.com/58xinian/Surge/master/Script/huke.js, img-url=https://raw.githubusercontent.com/58xinian/icon/master/huke.png, enabled=true, tag=虎课网
-cron "0 9 * * *" script-path=https://raw.githubusercontent.com/Sunert/Scripts/master/Task/jddj.js, img-url=https://qxzy.top/rules/QuantumultX/img/jddj.png, enabled=true, tag=京东到家
+cron "0 9 * * *" script-path=https://raw.githubusercontent.com/GoodHolidays/Scripts/master/Task/jddj.js, img-url=https://qxzy.top/rules/QuantumultX/img/jddj.png, enabled=true, tag=京东到家
 cron "3 20 * * *" script-path=https://raw.githubusercontent.com/i-chenzhe/qx/main/jd_shake.js, img-url=https://qxzy.top/rules/QuantumultX/img/jd.png, enabled=true, tag=⚠️摇一摇
 cron "5 0 * * *" script-path=https://raw.githubusercontent.com/evilbutcher/Quantumult_X/master/check_in/wechatsubs/wechatsubs.js, img-url=https://qxzy.top/rules/QuantumultX/img/wechat.png, enabled=true, tag=公众号监控
 cron "5 0 * * *" script-path=https://raw.githubusercontent.com/evilbutcher/Quantumult_X/master/check_in/klcw/klcw-app.js, img-url=https://raw.githubusercontent.com/evilbutcher/Quantumult_X/master/picture/klcw.png, enabled=true, tag=酷乐潮玩App
@@ -126,8 +127,8 @@ cron "5 0 * * *" script-path=https://raw.githubusercontent.com/ZCY01/daily_scrip
 cron "55 20 */3 * * *" script-path=https://gitee.com/curtinlv/qx/raw/master/Script/zmsp.js, img-url=https://s3.ax1x.com/2021/02/06/yYzeWn.png, enabled=true, tag=芝嫲视频
 cron "10 10,11 * * 2-5" script-path=https://github.com/i-chenzhe/qx/raw/main/jd_entertainment.js, img-url=https://qxzy.top/rules/QuantumultX/img/jd_entertainment.png, enabled=true, tag=⚠️百变大咖秀
 cron "36 0 8,12,13,14,18,19,20,21,22,23 * * *" script-path=https://raw.githubusercontent.com/elecV2/QuantumultX-Tools/master/dianx/dxbox.js, img-url=https://raw.githubusercontent.com/elecV2/QuantumultX-Tools/master/dianx/dxbox.png, enabled=true, tag=整点开宝箱
-cron "30 7-23 * * *" script-path=https://raw.githubusercontent.com/Sunert/Scripts/master/Task/baidu_speed.js, img-url=https://qxzy.top/rules/QuantumultX/img/baidu_speed.png, enabled=true, tag=百度极速版
-cron "35 5 0 * * *" script-path=https://raw.githubusercontent.com/Sunert/Scripts/master/Task/kuaishou.js, img-url=https://qxzy.top/rules/QuantumultX/img/kuaishou.png, enabled=true, tag=快手极速版
+cron "30 7-23 * * *" script-path=https://raw.githubusercontent.com/GoodHolidays/Scripts/master/Task/baidu_speed.js, img-url=https://qxzy.top/rules/QuantumultX/img/baidu_speed.png, enabled=true, tag=百度极速版
+cron "35 5 0 * * *" script-path=https://raw.githubusercontent.com/GoodHolidays/Scripts/master/Task/kuaishou.js, img-url=https://qxzy.top/rules/QuantumultX/img/kuaishou.png, enabled=true, tag=快手极速版
 cron "0 9 * * *" script-path=https://raw.githubusercontent.com/ZhiYi-N/script/master/kkd.js, img-url=https://qxzy.top/rules/QuantumultX/img/kkd.png, enabled=true, tag=快看点
 cron "5,35 8-23 * * *" script-path=https://raw.githubusercontent.com/ZhiYi-N/Private-Script/master/Scripts/jrtt.js, img-url=https://qxzy.top/rules/QuantumultX/img/jrtt.png, enabled=true, tag=今日头条极速版
 cron "1 * * * *" script-path=https://raw.githubusercontent.com/age174/-/main/baosxq.js, img-url=https://raw.githubusercontent.com/sngxpro/icons/main/genshin/mona.png, enabled=true, tag=宝石星球
@@ -235,12 +236,12 @@ cron "0 10 0 * * *" script-path=https://raw.githubusercontent.com/DD-D1/2020scri
 cron "0 10 0 * * *" script-path=https://raw.githubusercontent.com/DD-D1/2020scripts/master/zscdbSign.js, img-url=https://qxzy.top/rules/QuantumultX/img/zscdb.png, enabled=true, tag=追书畅读版
 cron "0 10 0 * * *" script-path=https://raw.githubusercontent.com/DD-D1/2020scripts/master/zymkSign.js, img-url=https://qxzy.top/rules/QuantumultX/img/zymk.png, enabled=true, tag= 知音漫客
 cron "5 5 * * *" script-path=https://raw.githubusercontent.com/799953468/Quantumult-X/master/Scripts/JD/jd_paopao.js, img-url=https://raw.githubusercontent.com/58xinian/icon/master/jd_paopao.png, enabled=true, tag=泡泡大作战
-cron "0 0 8 * * *" script-path=https://raw.githubusercontent.com/Sunert/Scripts/master/Task/tvpreview.js, img-url=https://qxzy.top/rules/QuantumultX/img/tvpreview.png, enabled=true, tag=节目预告
+cron "0 0 8 * * *" script-path=https://raw.githubusercontent.com/GoodHolidays/Scripts/master/Task/tvpreview.js, img-url=https://qxzy.top/rules/QuantumultX/img/tvpreview.png, enabled=true, tag=节目预告
 cron "0 10 0 * * *" script-path=https://raw.githubusercontent.com/DD-D1/2020scripts/master/hdhycSign.js, img-url=https://qxzy.top/rules/QuantumultX/img/hdhyc.png, enabled=true, tag=海德汇一城
 cron "0 10 0 * * *" script-path=https://raw.githubusercontent.com/DD-D1/2020scripts/master/mygmcSign.js, img-url=https://qxzy.top/rules/QuantumultX/img/mygmc.png, enabled=true, tag=民盈国贸城
 cron "0 10 0 * * *" script-path=https://raw.githubusercontent.com/DD-D1/2020scripts/master/qczjSign.js, img-url=https://qxzy.top/rules/QuantumultX/img/qczj.png, enabled=true, tag= 汽车之家极速版
 cron "0 10 0 * * *" script-path=https://raw.githubusercontent.com/XidNDD/2020scripts/master/sdcbxscSign.js, img-url=https://qxzy.top/rules/QuantumultX/img/sdc.png, enabled=true, tag=水滴筹保险商城小程序
-cron "0 0 8 * * *" script-path=https://raw.githubusercontent.com/Sunert/Scripts/master/Task/trainquery.js, img-url=https://qxzy.top/rules/QuantumultX/img/12306.png, enabled=true, tag=12306火车时刻
+cron "0 0 8 * * *" script-path=https://raw.githubusercontent.com/GoodHolidays/Scripts/master/Task/trainquery.js, img-url=https://qxzy.top/rules/QuantumultX/img/12306.png, enabled=true, tag=12306火车时刻
 cron "1 0 * * *" script-path=https://raw.githubusercontent.com/chavyleung/scripts/master/neteasenews/neteasenews.js, img-url=https://qxzy.top/rules/QuantumultX/img/neteasenews.png, enabled=true, tag=网易新闻
 cron "1 0 * * *" script-path=https://raw.githubusercontent.com/chavyleung/scripts/master/nio/nio.js, img-url=https://qxzy.top/rules/QuantumultX/img/nio.png, enabled=true, tag=蔚来
 cron "*/2 0-16 * * *" script-path=https://raw.githubusercontent.com/CenBoMin/QuantumultX/master/Scripts/HTT/htt_task_4.js, img-url=https://qxzy.top/rules/QuantumultX/img/htt.png, enabled=true, tag=惠头条
@@ -288,16 +289,16 @@ cron "1 0 * * *" script-path=https://raw.githubusercontent.com/songyangzz/Quantu
 cron "0 0 0,1 * * ?" script-path=https://raw.githubusercontent.com/lowking/Scripts/master/douyu/yubaSign.js, img-url=https://qxzy.top/rules/QuantumultX/img/douyu.png, enabled=true, tag=斗鱼鱼吧
 cron "1 0 * * *" script-path=https://raw.githubusercontent.com/songyangzz/QuantumultX/master/lol.js, img-url=https://qxzy.top/rules/QuantumultX/img/lol.png, enabled=true, tag=LOL排行查询
 cron "5 0 * * *" script-path=https://raw.githubusercontent.com/toulanboy/scripts/master/muchong/muchong.js, img-url=https://qxzy.top/rules/QuantumultX/img/muchong.png, enabled=true, tag=小木虫论坛
-cron "0 9 * * *" script-path=https://raw.githubusercontent.com/Sunert/Scripts/master/Task/dianshijia.js, img-url=https://qxzy.top/rules/QuantumultX/img/dianshijia.png, enabled=true, tag=电视家
-cron "0 10 * * *" script-path=https://raw.githubusercontent.com/Sunert/Scripts/master/Task/exchangeRate.js, img-url=https://qxzy.top/rules/QuantumultX/img/exchangerate.png, enabled=true, tag=实时货币换算
-cron "0 9 * * *" script-path=https://raw.githubusercontent.com/Sunert/Scripts/master/Task/lkyl.js, img-url=https://qxzy.top/rules/QuantumultX/img/lkyl.png, enabled=true, tag=来客有礼
-cron "0 9 * * *" script-path=https://raw.githubusercontent.com/Sunert/Scripts/master/Task/sinanews.js, img-url=https://qxzy.top/rules/QuantumultX/img/sinanews.png, enabled=true, tag=新浪新闻
-cron "0 10 * * *" script-path=https://raw.githubusercontent.com/Sunert/Scripts/master/Task/translate.js, img-url=https://qxzy.top/rules/QuantumultX/img/translate.png, enabled=true, tag=谷歌中英互译
-cron "0 9 * * *" script-path=https://raw.githubusercontent.com/Sunert/Scripts/master/Task/txnews.js, img-url=https://qxzy.top/rules/QuantumultX/img/txnews.png, enabled=true, tag=腾讯新闻
+cron "0 9 * * *" script-path=https://raw.githubusercontent.com/GoodHolidays/Scripts/master/Task/dianshijia.js, img-url=https://qxzy.top/rules/QuantumultX/img/dianshijia.png, enabled=true, tag=电视家
+cron "0 10 * * *" script-path=https://raw.githubusercontent.com/GoodHolidays/Scripts/master/Task/exchangeRate.js, img-url=https://qxzy.top/rules/QuantumultX/img/exchangerate.png, enabled=true, tag=实时货币换算
+cron "0 9 * * *" script-path=https://raw.githubusercontent.com/GoodHolidays/Scripts/master/Task/lkyl.js, img-url=https://qxzy.top/rules/QuantumultX/img/lkyl.png, enabled=true, tag=来客有礼
+cron "0 9 * * *" script-path=https://raw.githubusercontent.com/GoodHolidays/Scripts/master/Task/sinanews.js, img-url=https://qxzy.top/rules/QuantumultX/img/sinanews.png, enabled=true, tag=新浪新闻
+cron "0 10 * * *" script-path=https://raw.githubusercontent.com/GoodHolidays/Scripts/master/Task/translate.js, img-url=https://qxzy.top/rules/QuantumultX/img/translate.png, enabled=true, tag=谷歌中英互译
+cron "0 9 * * *" script-path=https://raw.githubusercontent.com/GoodHolidays/Scripts/master/Task/txnews.js, img-url=https://qxzy.top/rules/QuantumultX/img/txnews.png, enabled=true, tag=腾讯新闻
 cron "0 9 * * *" script-path=https://raw.githubusercontent.com/toulanboy/scripts/master/weibo/weibotalk.js, img-url=https://qxzy.top/rules/QuantumultX/img/weibo.png, enabled=true, tag=微博超话
-cron "0 11 8 * * *" script-path=https://raw.githubusercontent.com/Sunert/Scripts/master/Task/weibo.js, img-url=https://qxzy.top/rules/QuantumultX/img/weibo.png, enabled=true, tag=微博签到
-cron "0 9 * * *" script-path=https://raw.githubusercontent.com/Sunert/Scripts/master/Task/mydigit.js, img-url=https://qxzy.top/rules/QuantumultX/img/mydigit.png, enabled=true, tag=数码之家
-cron "0 10 * * *" script-path=https://raw.githubusercontent.com/Sunert/Scripts/master/Task/trainquery.js, img-url=https://qxzy.top/rules/QuantumultX/img/12306.png, enabled=true, tag=火车票及列车时刻
+cron "0 11 8 * * *" script-path=https://raw.githubusercontent.com/GoodHolidays/Scripts/master/Task/weibo.js, img-url=https://qxzy.top/rules/QuantumultX/img/weibo.png, enabled=true, tag=微博签到
+cron "0 9 * * *" script-path=https://raw.githubusercontent.com/GoodHolidays/Scripts/master/Task/mydigit.js, img-url=https://qxzy.top/rules/QuantumultX/img/mydigit.png, enabled=true, tag=数码之家
+cron "0 10 * * *" script-path=https://raw.githubusercontent.com/GoodHolidays/Scripts/master/Task/trainquery.js, img-url=https://qxzy.top/rules/QuantumultX/img/12306.png, enabled=true, tag=火车票及列车时刻
 cron "0 9 */7 * *" script-path=https://raw.githubusercontent.com/Peng-YM/QuanX/master/Tasks/epic.js, img-url=https://qxzy.top/rules/QuantumultX/img/epic.png, enabled=true, tag=Epic周免
 cron "0 9 * * *" script-path=https://raw.githubusercontent.com/Peng-YM/QuanX/master/Tasks/exchange.js, img-url=https://qxzy.top/rules/QuantumultX/img/exchangerate.png, enabled=true, tag=汇率监控
 cron "0 9 * * *" script-path=https://raw.githubusercontent.com/Peng-YM/QuanX/master/Tasks/github.js, img-url=https://qxzy.top/rules/QuantumultX/img/github.png, enabled=true, tag=GitHub
