--- a/task/AllinOne.conf
+++ b/task/AllinOne.conf
@@ -1,6 +1,7 @@
 # 公众号少年歌行pro全网合一整理
 # 请善用搜索功能，如搜索京东可查所有京东脚本
 
+cron "10,20,30 0-23 * * *" script-path=https://raw.githubusercontent.com/age174/-/main/xfyjc.js, img-url=https://ae01.alicdn.com/kf/Ue110888eddad48a8a78d99284e599b134.jpg, enabled=true, tag=幸福养鸡场
 cron "10 0 * * *" script-path=https://jdsharedresourcescdn.azureedge.net/jdresource/jd_jin_tie.js, img-url=https://raw.githubusercontent.com/Orz-3/mini/master/Color/jd.png, enabled=true, tag=京东领金贴
 cron "10 0 * * *" script-path=https://raw.githubusercontent.com/age174/-/main/bsly.js, img-url=https://ae01.alicdn.com/kf/U2fec2be787b74fb3928d83773822eef56.jpg, enabled=true, tag=百事乐元
 cron "7 24,47 12 * * ?" script-path=https://cdn.jsdelivr.net/gh/ziye888/JavaScript@main/Task/tls.js, img-url=https://raw.githubusercontent.com/sngxpro/icons/main/genshin/mona.png, enabled=true, tag=特仑苏小程序
