--- a/task/AllinOne.conf
+++ b/task/AllinOne.conf
@@ -1,6 +1,8 @@
 # 公众号少年歌行pro全网合一整理
 # 请善用搜索功能，如搜索京东可查所有京东脚本
 
+cron "5,35 9-22 * * *" script-path=https://raw.githubusercontent.com/age174/-/main/66yd.js, img-url=https://ae01.alicdn.com/kf/Uaade4566dd3744299956aa883f225386u.jpg, enabled=true, tag=66阅读修复版
+cron "2 0 * * *" script-path=https://raw.githubusercontent.com/xl2101200/-/main/hhkk.js, img-url=https://raw.githubusercontent.com/sngxpro/icons/main/genshin/mona.png, enabled=true, tag=火狐看看
 cron "*/30 * * * *" script-path=https://raw.githubusercontent.com/ZhiYi-N/Private-Script/master/Scripts/kxhy.js, img-url=https://raw.githubusercontent.com/Ariszy/Private-Script/master/img/kxhy.png, enabled=true, tag=开心花园
 cron "35 9-22 * * *" script-path=https://raw.githubusercontent.com/age174/-/main/qhyd.js, img-url=https://ae01.alicdn.com/kf/U413ab7460abb4a28b11deac3c5034243N.jpg, enabled=true, tag=千禾阅读
 cron "10,20,30 0-23 * * *" script-path=https://raw.githubusercontent.com/age174/-/main/xfyjc.js, img-url=https://ae01.alicdn.com/kf/Ue110888eddad48a8a78d99284e599b134.jpg, enabled=true, tag=幸福养鸡场
@@ -77,7 +79,6 @@ cron "*/30 * * * *" script-path=https://raw.githubusercontent.com/ZhiYi-N/Privat
 cron "10 */1 * * *" script-path=https://raw.githubusercontent.com/GoodHolidays/Scripts/master/Task/youth.js, img-url=https://raw.githubusercontent.com/erdongchanyo/icon/main/taskicon/Youth.png, enabled=true, tag=sunert中青签到&转盘宝箱&时长
 cron "10 */2 * * *" script-path=https://raw.githubusercontent.com/GoodHolidays/Scripts/master/Task/Youth_Read.js, img-url=https://raw.githubusercontent.com/erdongchanyo/icon/main/taskicon/Youth.png, enabled=true, tag=sunert中青自动阅读
 cron "30 6 * * *" script-path=https://raw.githubusercontent.com/ztxtop/x/main/youth_banner.js, img-url=https://raw.githubusercontent.com/erdongchanyo/icon/main/taskicon/Youth.png, enabled=true, tag=ztxtop中青看看赚&浏览赚
-cron "5,35 9-22 * * *" script-path=https://raw.githubusercontent.com/age174/-/main/66yd.js, img-url=https://ae01.alicdn.com/kf/Uaade4566dd3744299956aa883f225386u.jpg, enabled=true, tag=66阅读
 cron "0 7 * * *" script-path=https://raw.githubusercontent.com/sngxpro/QuanX/master/scripts/ygkc.js, img-url=https://raw.githubusercontent.com/erdongchanyo/icon/main/taskicon/Yunsaoma.png, enabled=true, tag=阳光矿场
 cron "*/20 * * * *" script-path=https://raw.githubusercontent.com/ZhiYi-N/Private-Script/master/Scripts/kkd.js, img-url=https://raw.githubusercontent.com/ZhiYi-N/Private-Script/master/img/kkd.png, enabled=true, tag=快看点
 cron "0 0 0 * * *" script-path=https://jdsharedresourcescdn.azureedge.net/jdresource/jd_xtg.js, img-url=https://raw.githubusercontent.com/Orz-3/mini/master/Color/jd.png, enabled=true, tag=京东手机尚学季
